@@ -1,10 +1,10 @@
 uqm_SUBDIRS="comm libs planets ships"
-uqm_CFILES="battle.c border.c build.c cleanup.c clock.c cnctdlg.c collide.c 
+uqm_CFILES="battle.c border.c build.c cleanup.c clock.c cnctdlg.c collide.c
 		comm.c commanim.c commglue.c confirm.c credits.c cyborg.c
 		demo.c displist.c dummy.c encount.c flash.c fmv.c galaxy.c gameev.c
 		gameinp.c gameopt.c gendef.c getchar.c globdata.c gravity.c
 		gravwell.c grpinfo.c hyper.c init.c intel.c intro.c ipdisp.c
-		load.c loadship.c master.c melee.c menu.c misc.c mouse_err.c
+		load.c loadship.c master.c melee.c menu.c misc.c
 		oscill.c outfit.c pickmele.c pickship.c plandata.c process.c
 		restart.c save.c settings.c setup.c setupmenu.c ship.c
 		shipstat.c shipyard.c sis.c sounds.c starbase.c starcon.c
