@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Removed mouse_err.c since DoPopupWindow() is used now - SvdB
 - (debugging) Fixed instant-move towards the current location - SvdB
 - Fixed wrong Sa-Matra guards icons after Kohr-Ah win (bug #1001) - Alex
 - Internal ship structures and queues refactoring and cleanup - Alex
